# Idk

./: badwords.txt  bj.txt  bww.txt  crunchyroll.txt  gypsy.txt  main.py  nsfw.txt  porn.txt  pyproject.toml  replit_zip_error_log.txt  sites.txt  train.txt  train2.txt
