[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
colorama = "^0.4.4"
guild = "^1.1.4"
requests = "^2.28.2"
convert = "^0.1.2"
tweepy = "^4.14.0"
bs4 = "^0.0.1"
humanfriendly = "^10.0"
modules = "^1.0.0"
psutil = "^5.9.5"
pydantic = "^1.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"